# nautobot-plugin-evpn

./: pyproject.toml
nautobot_plugin_evpn/: __init__.py  admin.py  filters.py  forms.py  homepage.py  models.py  navigation.py  tables.py  urls.py  views.py
nautobot_plugin_evpn/api/: serializers.py  urls.py  views.py
nautobot_plugin_evpn/migrations/: 0001_initial.py  0002_alter_evpnservice_description.py  0003_rename_description_evpnservice_descr.py  0004_rename_descr_evpnservice_description.py  0005_auto_20220923_0328.py  0006_auto_20220929_0202.py  0007_auto_20220929_0205.py  0008_evpnattachmentpoint.py  0009_rename_descriptions_evpnattachmentpoint_description.py  0010_evpnattachmentpoint_device.py  0011_alter_evpnattachmentpoint_evpn_service.py  0012_evpnlayer3interface.py  0013_evpnethernetsegment.py  0014_auto_20221007_0327.py  0015_auto_20221018_0213.py
nautobot_plugin_evpn/templates/nautobot_plugin_evpn/: evpnattachmentpoint.html  evpnattachmentpoint_edit.html  evpnethernetsegment.html  evpnethernetsegmentlaginterface.html  evpnlayer2vrf.html  evpnlayer3vrf.html  evpnservice.html  vni.html
nautobot_plugin_evpn/tests/: test_api.py  test_models.py  test_nautobot_plugin_epvn.py
