[tool.poetry]
name = "nautobot-plugin-evpn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nautobot_plugin_evpn"}]

[tool.poetry.dependencies]
python = "^3.10"
nautobot = "^1.4.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
ipython = "^8.5.0"
flake8 = "^5.0.4"
invoke = "*"
mkdocs = "^1.3.1"
pydocstyle = "^6.1.1"
pylint-django = "^2.5.3"
yamllint = "^1.28.0"
pylint = "^2.15.3"
django-debug-toolbar = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''